-
Bug
-
Resolution: Fixed
-
P1: Critical
-
None
-
6.5
-
None
Latest qtdeclarative nightly runs on macOS 13 arm cause a infinite loop to happen in the test. That causes the log to increase in size to tens of GBs, until the jenkins host runs out of disk space. Due to that it is not possible to view the log from Coin. Log with most of the duplication cut out attached.
Most relevant part:
agent:2022/09/18 16:24:53 build.go:394: 302: PASS : tst_QQuickControl::Material::initTestCase() agent:2022/09/18 16:24:54 build.go:394: 302: QWARN : tst_QQuickControl::Material::flickable() Failed to serialize MTLBinaryArchive: Failed to generate machO:error: cannot find hash 'B0D5D646E618EB8F65D3C73F8AA6346805964EE9986F84BBC84B66F44BD2711E' in '/var/folders/2s/5k8hsz413nz_y0dq1w54vt000000gn/C//com.apple.gpuarchiver/gpuarchiver-3f9852/applegpu_g13g/default-9cfcc1.metallib' descriptor table agent:2022/09/18 16:24:54 build.go:394: 302: error: units for arch 'applegpu_g13g' are not packed agent:2022/09/18 16:24:54 build.go:394: 302: agent:2022/09/18 16:24:54 build.go:394: 302: Received signal 11 (SIGSEGV), code 2, for address 0x00007b7593010b60 agent:2022/09/18 16:24:54 build.go:394: 302: flickable function time: 192ms, total time: 1480ms agent:2022/09/18 16:24:54 build.go:394: 302: Received signal 11 (SIGSEGV), code 2, for address 0x00007b7593010b60 agent:2022/09/18 16:24:54 build.go:394: 302: flickable function time: 192ms, total time: 1480ms
- is duplicated by
-
QTBUG-108499 Crashes on render thread when closing quick3d example application
-
- Closed
-
- resulted in
-
QTBUG-108216 Investigate the QRhi pipeline cache (MTLBinaryArchive usage) on macOS 13
-
- Open
-
| For Gerrit Dashboard: QTBUG-106703 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 441761,5 | Disable the automatic persistent pipeline cache on macOS/iOS | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 442211,6 | rhi: metal: Move macOS 13 pipeline cache workaround to the backend | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 442359,3 | Revert "Disable the automatic persistent pipeline cache on macOS/iOS" | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |