Disable the automatic persistent pipeline cache on macOS/iOS

At least until we get to do more testing on macOS 13.

Task-number: QTBUG-106703
Change-Id: I1203959f114c8c9577f55818e31820ba99ea143f
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>