src/quick/items/qquickgraphicsconfiguration.cpp
@@ -791,8 +791,11 @@ QQuickGraphicsConfigurationPrivate::QQuickGraphicsConfigurationPrivate()
     static const bool autoPipelineCache = !QCoreApplication::instance()->testAttribute(Qt::AA_DisableShaderDiskCache)
             && !qEnvironmentVariableIntValue("QT_DISABLE_SHADER_DISK_CACHE")
             && !qEnvironmentVariableIntValue("QSG_RHI_DISABLE_DISK_CACHE");
-    if (autoPipelineCache)
+    if (autoPipelineCache) {
+#if !defined(Q_OS_MACOS) && !defined(Q_OS_IOS)
         flags |= AutoPipelineCache;
+#endif
+    }
 
     static const QString pipelineCacheSaveFileEnv = qEnvironmentVariable("QSG_RHI_PIPELINE_CACHE_SAVE");
     pipelineCacheSaveFile = pipelineCacheSaveFileEnv;
